adding all files from my basic portfolio to my github pages

--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Basic Portfolio</title>
+
+    <!-- style css file -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-    <h1>Badam-boom-boom, this is Ian Bunn</h1>
+    <!-- wrapper -->
+    <div class="wrapper">
+
+        <!-- header -->
+        <header>
+
+            <!-- logo -->
+            <div class="logo">
+                <h1><a href="index.html" alt="">IAN BUNN</a></h1>
+            </div>
+
+            <!-- nav menu items -->
+            <div class="nav">
+                <ul>
+                    <li class="nav-item"><a href="index.html">About</a></li>
+                    <li class="nav-item">|</li>
+                    <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+                    <li class="nav-item">|</li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </header>
+
+        <!-- about container -->
+        <div class="container">
+            <div id="about">
+                <h2>About Me</h2>
+                <hr>
+
+                <!-- profile image -->
+                <img class="profile" src="assets/images/placeholder.png" alt="profile" width="200" height="200" />
+
+                <!-- bio -->
+                <div class="bio">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas vel ea a repellendus
+                        magnam nostrum eaque doloremque quos? Sed ab accusamus similique debitis maxime, ea suscipit
+                        incidunt, illum fuga ullam beatae et asperiores quasi natus dolore sequi nulla magnam vel
+                        tenetur quisquam. Nam, placeat dolorem reprehenderit neque veniam quam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas vel ea a repellendus
+                        magnam nostrum eaque doloremque quos? Sed ab accusamus similique debitis maxime, ea suscipit
+                        incidunt, illum fuga ullam beatae et asperiores quasi natus dolore sequi nulla magnam vel
+                        tenetur quisquam. Nam, placeat dolorem reprehenderit neque veniam quam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas vel ea a repellendus
+                        magnam nostrum eaque doloremque quos? Sed ab accusamus similique debitis maxime, ea suscipit
+                        incidunt, illum fuga ullam beatae et asperiores quasi natus dolore sequi nulla magnam vel
+                        tenetur quisquam. Nam, placeat dolorem reprehenderit neque veniam quam.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- footer -->
+        <footer>
+            <h6>Copyright ©</h6>
+        </footer>
+    </div>
 </body>
+
 </html>
