--- a/about.html
+++ b/about.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ian Bunn</title>
+    <title>Ian Bunn - about</title>
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Megrim|Space+Mono" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -18,9 +21,11 @@
 <body>
 
     <div class="menu">
+        <ul class="logo">
+            <li><a href="index.html">Ian Bunn</a></li>
+        </ul>
         <ul class="items">
-            <li><a href="#">Ian Bunn</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="tools.html">Tools</a></li>
