--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
 
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Megrim|Space+Mono" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
     <div class="menu">
-        <ul class="items">
+        <ul class="logo">
             <li><a href="#">Ian Bunn</a></li>
+        </ul>
+        <ul class="items">
             <li><a href="about.html">About</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
