--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ian Bunn</title>
+    <title>Ian Bunn - code away</title>
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -24,7 +24,7 @@
         </ul>
         <ul class="items">
             <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <!-- <li><a href="blog.html">Blog</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="tools.html">Tools</a></li>
             <li><a href="culture.html">Culture</a></li>
@@ -34,7 +34,7 @@
                     <li><a href="movies.html">Movies</a></li>
                     <li><a href="music.html">Music</a></li>
                 </ul>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li> -->
         </ul>
     </div>
 
