added bootstrap classes in html for container, row, cols

--- a/index.html
+++ b/index.html
@@ -20,26 +20,31 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
-    <div class="menu">
-        <ul class="logo">
-            <li><a href="#">Ian Bunn</a></li>
-        </ul>
-        <ul class="items">
-            <li><a href="about.html">About</a></li>
-            <!-- <li><a href="blog.html">Blog</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="tools.html">Tools</a></li>
-            <li><a href="culture.html">Culture</a></li>
-                <ul>
-                    <li><a href="art.html">Art</a></li>
-                    <li><a href="books.html">Books</a></li>
-                    <li><a href="movies.html">Movies</a></li>
-                    <li><a href="music.html">Music</a></li>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2">
+            <div class="menu">
+                <ul class="logo">
+                    <li><a href="#">Ian Bunn</a></li>
                 </ul>
-            <li><a href="contact.html">Contact</a></li> -->
-        </ul>
+                <ul class="items">
+                    <li><a href="about.html">About</a></li>
+                    <!-- <li><a href="blog.html">Blog</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="tools.html">Tools</a></li>
+                    <li><a href="culture.html">Culture</a></li>
+                        <ul>
+                            <li><a href="art.html">Art</a></li>
+                            <li><a href="books.html">Books</a></li>
+                            <li><a href="movies.html">Movies</a></li>
+                            <li><a href="music.html">Music</a></li>
+                        </ul>
+                    <li><a href="contact.html">Contact</a></li> -->
+                </ul>
+            </div>
+        </div>
     </div>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
