--- a/about.html
+++ b/about.html
@@ -22,37 +22,48 @@
 </head>
 
 <body>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2">
+            <div class="menu">
+                <ul class="logo">
+                    <li><a href="index.html">Ian Bunn</a></li>
+                </ul>
+                <ul class="items">
+                    <li><a href="#">About</a></li>
+                    <!-- <li><a href="blog.html">Blog</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="tools.html">Tools</a></li>
+                    <li><a href="culture.html">Culture</a></li>
+                    <ul>
+                        <li><a href="art.html">Art</a></li>
+                        <li><a href="books.html">Books</a></li>
+                        <li><a href="movies.html">Movies</a></li>
+                        <li><a href="music.html">Music</a></li>
+                    </ul>
+                    <li><a href="contact.html">Contact</a></li> -->
+                </ul>
+            </div>
+        </div>
 
-    <div class="menu">
-        <ul class="logo">
-            <li><a href="index.html">Ian Bunn</a></li>
-        </ul>
-        <ul class="items">
-            <li><a href="#">About</a></li>
-            <!-- <li><a href="blog.html">Blog</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="tools.html">Tools</a></li>
-            <li><a href="culture.html">Culture</a></li>
-            <ul>
-                <li><a href="art.html">Art</a></li>
-                <li><a href="books.html">Books</a></li>
-                <li><a href="movies.html">Movies</a></li>
-                <li><a href="music.html">Music</a></li>
-            </ul>
-            <li><a href="contact.html">Contact</a></li> -->
-        </ul>
+        <div class="col-sm-10">
+            <div class="content">
+                <img src="" alt="Ian Bunn profile image">
+                <br>
+                <br>
+                <p>
+                    What's up, man.
+                <br>
+                <br>
+                    It's me, Ian, currently living in <span class="crossed-out">Nvo. Laredo, Mexico (0115287)</span> <span class="crossed-out">LTX (956)</span> <span class="crossed-out">SATX (210)</span> <span class="crossed-out">KTX (361)</span> <span class="crossed-out">SDTX (361)</span> <b>ATX (512)</b>.
+                <br>
+                <br>
+                    Feel free to follow me on <a href="https://twitter.com/el_cryptonian" target="_blank">Twitter</a> or peruse my <a href="https://github.com/ianbunn" target="_blank">GitHub repos</a>. I also have this <a href="https://www.linkedin.com/in/ianbunn/" target="_blank">LinkedIn</a> where I post my current job positions and other bureacratic-related stuff.
+                </p>
+            </div>
+        </div>
     </div>
-
-    <div class="content">
-        <img src="" alt="Ian Bunn profile image">
-        <p>
-            What's up, man.
-        <br>
-            It's me, Ian, currently living in <span class="crossed-out">Nvo. Laredo, Mexico (0115287)</span> <span class="crossed-out">LTX (956)</span> <span class="crossed-out">SATX (210)</span> <span class="crossed-out">KTX (361)</span> <span class="crossed-out">SDTX (361)</span> ATX (512).
-        <br>
-            Feel free to follow me on <a href="https://twitter.com/el_cryptonian" target="_blank">Twitter</a> or peruse my <a href="https://github.com/ianbunn" target="_blank">GitHub repos</a>. I also have this <a href="https://www.linkedin.com/in/ianbunn/" target="_blank">LinkedIn</a> where I post my current job positions and other bureacratic-related stuff.
-        </p>
-    </div>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
