--- a/about.html
+++ b/about.html
@@ -31,8 +31,9 @@
                 </ul>
                 <ul class="items">
                     <li><a href="#">About</a></li>
-                    <!-- <li><a href="blog.html">Blog</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                    <!-- <li><a href="blog.html">Blog</a></li>
+                    
                     <li><a href="tools.html">Tools</a></li>
                     <li><a href="culture.html">Culture</a></li>
                     <ul>
@@ -56,6 +57,9 @@
                 <br>
                 <br>
                     It's me, Ian, currently living in <span class="crossed-out">Nvo. Laredo, Mexico (0115287)</span> <span class="crossed-out">LTX (956)</span> <span class="crossed-out">SATX (210)</span> <span class="crossed-out">KTX (361)</span> <span class="crossed-out">SDTX (361)</span> <b>ATX (512)</b>.
+                <br>
+                <br>
+                    At the moment, I'm working on a Full-stack Development Certification at the University of Texas in Austin. With this acquired education, I will work on my crazy ideas and build apps for an enlightened society.
                 <br>
                 <br>
                     Feel free to follow me on <a href="https://twitter.com/el_cryptonian" target="_blank">Twitter</a> or peruse my <a href="https://github.com/ianbunn" target="_blank">GitHub repos</a>. I also have this <a href="https://www.linkedin.com/in/ianbunn/" target="_blank">LinkedIn</a> where I post my current job positions and other bureacratic-related stuff.
