--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ian Bunn - code away</title>
+    <title>Ian Bunn - portfolio</title>
 
     <!-- Reset CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -19,18 +20,19 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-2">
-            <div class="menu">
-                <ul class="logo">
-                    <li><a href="#">Ian Bunn</a></li>
-                </ul>
-                <ul class="items">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <!-- <li><a href="blog.html">Blog</a></li>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="menu">
+                    <ul class="logo">
+                        <li><a href="index.html">Ian Bunn</a></li>
+                    </ul>
+                    <ul class="items">
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <!-- <li><a href="blog.html">Blog</a></li>
                     <li><a href="tools.html">Tools</a></li>
                     <li><a href="culture.html">Culture</a></li>
                         <ul>
@@ -40,20 +42,20 @@
                             <li><a href="music.html">Music</a></li>
                         </ul>
                     <li><a href="contact.html">Contact</a></li> -->
-                </ul>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -62,4 +64,5 @@
     <!-- Custom JS -->
     <script src="assets/js/app.js"></script>
 </body>
+
 </html>
