added profile image

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 
         <div class="col-sm-10">
             <div class="content">
-                <img src="" alt="Ian Bunn profile image">
+                <img src="assets/images/profile.jpeg" class="img-fluid rounded mx-auto d-block" alt="Ian Bunn profile image">
                 <br>
                 <br>
                 <p>
