--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,11 @@
                     </ul>
                 </div>
             </div>
+            <div class="col-sm-10">
+                <div class="content">
+                    <p>Coming soon!</p>
+                </div>
+            </div>
         </div>
     </div>
 
