added portfolio entries

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,28 @@
             </div>
             <div class="col-sm-10">
                 <div class="content">
-                    <p>Coming soon!</p>
+                    <ul>
+                        <li><a href="http://brewstereqs.com/" target="_blank">Brewster Environmental Quality Services (BEQS)</a>
+                        <p>Designed website using WordPress<br>
+                        PHP oriented with commercial plug-ins<br>
+                        Cloud-based hosted on AWS EC2<br>
+                        Created for private client</p></li>
+                        <li><a href="http://ianbunn.github.io/TriviaGame/" target="_blank">The Office (TV Show) Trivia Game</a>
+                        <p>Designed website using Bootstrap v4.1.3<br>
+                        JavaScript oriented<br>
+                        Hosted on GitHub pages<br>
+                        Created for UT Coding Bootcamp</p></li>
+                        <li><a href="https://ianbunn.github.io/unit-4-game/" target="_blank">Crystal Collector Game</a>
+                        <p>Designed website using Bootstrap v4.1.3<br>
+                        JavaScript oriented<br>
+                        Hosted on GitHub pages<br>
+                        Created for UT Coding Bootcamp</p></li>
+                        <li><a href="https://ianbunn.github.io/Word-Guess-Name/" target="_blank">Famous Robots Hangman Game</a>
+                        <p>Designed website using Bootstrap v4.1.3<br>
+                        JavaScript oriented<br>
+                        Hosted on GitHub pages<br>
+                        Created for UT Coding Bootcamp</p></li>
+                    </ul>
                 </div>
             </div>
         </div>
