--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,11 @@
                         PHP oriented with commercial plug-ins<br>
                         Cloud-based hosted on AWS EC2<br>
                         Created for private client</p></li>
+                        <li><a href="https://ianbunn.github.io/GifTastic/index.html" target="_blank">GIFTastic</a>
+                        <p>Designed website using Bootstrap v4.1.3<br>
+                        JavaScript oriented<br>
+                        Hosted on GitHub pages<br>
+                        Created for UT Coding Bootcamp</p></li>
                         <li><a href="http://ianbunn.github.io/TriviaGame/" target="_blank">The Office (TV Show) Trivia Game</a>
                         <p>Designed website using Bootstrap v4.1.3<br>
                         JavaScript oriented<br>
