--- a/portfolio.html
+++ b/portfolio.html
@@ -53,26 +53,37 @@
                         PHP oriented with commercial plug-ins<br>
                         Cloud-based hosted on AWS EC2<br>
                         Created for private client</p></li>
+                        
+                        <li><a href="https://nicolaosjm.github.io/Project1/" target="_blank">Dump Trump Insights</a>
+                        <p>API Development<br>
+                        Firebase Database<br>
+                        Hosted on GitHub pages<br>
+                        Team Project Created for UT Coding Bootcamp</p></li>
+
                         <li><a href="https://ianbunn.github.io/TrainScheduler/" target="_blank">Train Scheduler (Simulation)</a>
                         <p>Designed website using Bootstrap v4.1.3<br>
                         JavaScript oriented<br>
                         Hosted on GitHub pages<br>
                         Created for UT Coding Bootcamp</p></li>
+
                         <li><a href="https://ianbunn.github.io/GifTastic/" target="_blank">GIFTastic</a>
                         <p>Designed website using Bootstrap v4.1.3<br>
                         JavaScript oriented<br>
                         Hosted on GitHub pages<br>
                         Created for UT Coding Bootcamp</p></li>
+
                         <li><a href="http://ianbunn.github.io/TriviaGame/" target="_blank">The Office (TV Show) Trivia Game</a>
                         <p>Designed website using Bootstrap v4.1.3<br>
                         JavaScript oriented<br>
                         Hosted on GitHub pages<br>
                         Created for UT Coding Bootcamp</p></li>
+
                         <li><a href="https://ianbunn.github.io/unit-4-game/" target="_blank">Crystal Collector Game</a>
                         <p>Designed website using Bootstrap v4.1.3<br>
                         JavaScript oriented<br>
                         Hosted on GitHub pages<br>
                         Created for UT Coding Bootcamp</p></li>
+
                         <li><a href="https://ianbunn.github.io/Word-Guess-Name/" target="_blank">Famous Robots Hangman Game</a>
                         <p>Designed website using Bootstrap v4.1.3<br>
                         JavaScript oriented<br>
