--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                         <p>API Development<br>
                         Firebase Database<br>
                         Hosted on GitHub pages<br>
-                        Team Project Created for UT Coding Bootcamp</p></li>
+                        Team project created for UT Coding Bootcamp</p></li>
 
                         <li><a href="https://ianbunn.github.io/TrainScheduler/" target="_blank">Train Scheduler (Simulation)</a>
                         <p>Designed website using Bootstrap v4.1.3<br>
