added new link style in portfolio with code link, added font awesome, added contact section in about, and removed addtl row from container and columns

--- a/about.html
+++ b/about.html
@@ -19,55 +19,76 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
 </head>
 
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-2">
-            <div class="menu">
-                <ul class="logo">
-                    <li><a href="index.html">Ian Bunn</a></li>
-                </ul>
-                <ul class="items">
-                    <li><a href="#">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <!-- <li><a href="blog.html">Blog</a></li>
-                    
-                    <li><a href="tools.html">Tools</a></li>
-                    <li><a href="culture.html">Culture</a></li>
-                    <ul>
-                        <li><a href="art.html">Art</a></li>
-                        <li><a href="books.html">Books</a></li>
-                        <li><a href="movies.html">Movies</a></li>
-                        <li><a href="music.html">Music</a></li>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="menu">
+                    <ul class="logo">
+                        <li><a href="index.html">Ian Bunn</a></li>
                     </ul>
-                    <li><a href="contact.html">Contact</a></li> -->
-                </ul>
+                    <ul class="items">
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <!-- <li><a href="blog.html">Blog</a></li>
+                        
+                        <li><a href="tools.html">Tools</a></li>
+                        <li><a href="culture.html">Culture</a></li>
+                        <ul>
+                            <li><a href="art.html">Art</a></li>
+                            <li><a href="books.html">Books</a></li>
+                            <li><a href="movies.html">Movies</a></li>
+                            <li><a href="music.html">Music</a></li>
+                        </ul>
+                        <li><a href="contact.html">Contact</a></li> -->
+                    </ul>
+                </div>
             </div>
-        </div>
 
-        <div class="col-sm-10">
-            <div class="content">
-                <img src="assets/images/profile.jpeg" class="img-fluid rounded mx-auto d-block" alt="Ian Bunn profile image">
-                <br>
-                <br>
-                <p>
-                    What's up, man.
-                <br>
-                <br>
-                    It's me, Ian, currently living in <span class="crossed-out">Nvo. Laredo, Mexico (0115287)</span> <span class="crossed-out">LTX (956)</span> <span class="crossed-out">SATX (210)</span> <span class="crossed-out">KTX (361)</span> <span class="crossed-out">SDTX (361)</span> <b>ATX (512)</b>.
-                <br>
-                <br>
-                    At the moment, I'm working on a Full-stack Development Certification at the University of Texas in Austin. With this acquired education, I will work on my crazy ideas and build apps for an enlightened society.
-                <br>
-                <br>
-                    Feel free to follow me on <a href="https://twitter.com/el_cryptonian" target="_blank">Twitter</a> or peruse my <a href="https://github.com/ianbunn" target="_blank">GitHub repos</a>. I also have this <a href="https://www.linkedin.com/in/ianbunn/" target="_blank">LinkedIn</a> where I post my current job positions and other bureacratic-related stuff.
-                </p>
+            <div class="col-sm-10">
+                <div class="content">
+                    <img src="assets/images/profile.jpeg" class="img-fluid rounded mx-auto d-block" alt="Ian Bunn profile image">
+                    <br>
+                    <br>
+                    <p>
+                        What's up, man.
+                    <br>
+                    <br>
+                        It's me, Ian, currently living in <span class="crossed-out">Nvo. Laredo, Mexico (0115287)</span> <span class="crossed-out">LTX (956)</span> <span class="crossed-out">SATX (210)</span> <span class="crossed-out">KTX (361)</span> <span class="crossed-out">SDTX (361)</span> <b>ATX (512)</b>.
+                    <br>
+                    <br>
+                        At the moment, I'm working on a Full-stack Development Certification at the University of Texas in Austin. With this acquired education, I will work on my crazy ideas and build apps for an enlightened society.
+                    <br>
+                    <br>
+                        Feel free to follow me on <a href="https://twitter.com/el_cryptonian" target="_blank"><i class="fab fa-twitter"></i> Twitter <i class="fab fa-twitter"></i></a> or peruse my <a href="https://github.com/ianbunn" target="_blank"><i class="fab fa-github"></i> GitHub repos <i class="fab fa-github"></i></a>. I also have this <a href="https://www.linkedin.com/in/ianbunn/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn <i class="fab fa-linkedin"></i></a> where I post my current job positions and other bureacratic-related stuff.
+
+                        <p>
+                            <a href="assets/misc/LinkedInCV.pdf" target="_blank">Click here to view my CV (extracted from LinkedIn)</a>
+                        </p>
+                    </p>
+                    <div class="col-m-6">
+                        <div id="contact">
+                            <p>
+                                Mail: <a href="mailto:ian.bunn@icloud.com">ian.bunn@icloud.com</a><br>
+
+                                Phone: <a href="tel:+19515472866">(951) 547-2866</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+    <!-- Font Awesome CDN -->
+    <script src="https://use.fontawesome.com/614d0dd26c.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
