--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                     <li><a href="#">Ian Bunn</a></li>
                 </ul>
                 <ul class="items">
-                    <li><a href="about.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html#contact">Contact</a></li>
                     <!-- <li><a href="blog.html">Blog</a></li>
                     <li><a href="tools.html">Tools</a></li>
                     <li><a href="culture.html">Culture</a></li>
