--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,10 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
 </head>
 
 <body>
@@ -30,8 +34,9 @@
                         <li><a href="index.html">Ian Bunn</a></li>
                     </ul>
                     <ul class="items">
-                        <li><a href="about.html">About</a></li>
                         <li><a href="#">Portfolio</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="about.html#contact">Contact</a></li>
                         <!-- <li><a href="blog.html">Blog</a></li>
                     <li><a href="tools.html">Tools</a></li>
                     <li><a href="culture.html">Culture</a></li>
@@ -49,51 +54,64 @@
                 <div class="content">
                     <ul>
                         <li><a href="http://brewstereqs.com/" target="_blank">Brewster Environmental Quality Services (BEQS)</a>
-                        <p>Designed website using WordPress<br>
-                        PHP oriented with commercial plug-ins<br>
-                        Cloud-based hosted on AWS EC2<br>
-                        Created for private client</p></li>
+                        <p><span class="pD">- Designed website using WordPress</span><br>
+                        <span class="pD">- PHP oriented with commercial plug-ins</span><br>
+                        <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
+                        <span class="pD">- Created for private client</span></p></li>
                         
                         <li><a href="https://nicolaosjm.github.io/Project1/" target="_blank">Dump Trump Insights</a>
-                        <p>API Development<br>
-                        Firebase Database<br>
-                        Hosted on GitHub pages<br>
-                        Team project created for UT Coding Bootcamp</p></li>
+                        <p><span class="pD">- API Development</span><br>
+                        <span class="pD">- Firebase Database</span><br>
+                        <span class="pD">- Hosted on GitHub pages</span><br>
+                        <span class="pD">- Team project created for UT Coding Bootcamp</span><br>
+                        <span class="cL"><a href="https://github.com/NicolaosJM/Project1" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
 
                         <li><a href="https://ianbunn.github.io/TrainScheduler/" target="_blank">Train Scheduler (Simulation)</a>
-                        <p>Designed website using Bootstrap v4.1.3<br>
-                        JavaScript oriented<br>
-                        Hosted on GitHub pages<br>
-                        Created for UT Coding Bootcamp</p></li>
+                        <p><span class="pD">- Designed website using Bootstrap v4.1.3</span><br>
+                        <span class="pD">- JavaScript oriented</span><br>
+                        <span class="pD">- Hosted on GitHub pages</span><br>
+                        <span class="pD">- Created for UT Coding Bootcamp</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/TrainScheduler" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
 
                         <li><a href="https://ianbunn.github.io/GifTastic/" target="_blank">GIFTastic</a>
-                        <p>Designed website using Bootstrap v4.1.3<br>
-                        JavaScript oriented<br>
-                        Hosted on GitHub pages<br>
-                        Created for UT Coding Bootcamp</p></li>
+                        <p><span class="pD">- Designed website using Bootstrap v4.1.3</span><br>
+                        <span class="pD">- JavaScript oriented</span><br>
+                        <span class="pD">- Hosted on GitHub pages</span><br>
+                        <span class="pD">- Created for UT Coding Bootcamp</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/GifTastic" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p>
+                        </li>
 
                         <li><a href="http://ianbunn.github.io/TriviaGame/" target="_blank">The Office (TV Show) Trivia Game</a>
-                        <p>Designed website using Bootstrap v4.1.3<br>
-                        JavaScript oriented<br>
-                        Hosted on GitHub pages<br>
-                        Created for UT Coding Bootcamp</p></li>
+                        <p><span class="pD">- Designed website using Bootstrap v4.1.3</span><br>
+                        <span class="pD">- JavaScript oriented</span><br>
+                        <span class="pD">- Hosted on GitHub pages</span><br>
+                        <span class="pD">- Created for UT Coding Bootcamp</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/TriviaGame" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p>
+                        </li>
 
                         <li><a href="https://ianbunn.github.io/unit-4-game/" target="_blank">Crystal Collector Game</a>
-                        <p>Designed website using Bootstrap v4.1.3<br>
-                        JavaScript oriented<br>
-                        Hosted on GitHub pages<br>
-                        Created for UT Coding Bootcamp</p></li>
+                        <p><span class="pD">- Designed website using Bootstrap v4.1.3</span><br>
+                        <span class="pD">- JavaScript oriented</span><br>
+                        <span class="pD">- Hosted on GitHub pages</span><br>
+                        <span class="pD">- Created for UT Coding Bootcamp</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/unit-4-game" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p>
+                        </li>
 
                         <li><a href="https://ianbunn.github.io/Word-Guess-Name/" target="_blank">Famous Robots Hangman Game</a>
-                        <p>Designed website using Bootstrap v4.1.3<br>
-                        JavaScript oriented<br>
-                        Hosted on GitHub pages<br>
-                        Created for UT Coding Bootcamp</p></li>
+                        <p><span class="pD">- Designed website using Bootstrap v4.1.3</span><br>
+                        <span class="pD">- JavaScript oriented</span><br>
+                        <span class="pD">- Hosted on GitHub pages</span><br>
+                        <span class="pD">- Created for UT Coding Bootcamp</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/Word-Guess-Name" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p>
+                        </li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Font Awesome CDN -->
+    <script src="https://use.fontawesome.com/614d0dd26c.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
