adding portfolio item for liribot

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,13 @@
                         <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
                         <span class="pD">- Created for private client</span></p></li>
                         
+                        <li><a href="https://github.com/ianbunn/LIRIbot" target="_blank">LIRIBot</a>
+                        <p><span class="pD">- Language Interpretation and Recognition Interface (LIRI)</span><br>
+                        <span class="pD">- Node JS aplication</span><br>
+                        <span class="pD">- NPM packages used to run app</span><br>
+                        <span class="pD">- APIs to get information for app functionality</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/LIRIbot" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
+
                         <li><a href="https://nicolaosjm.github.io/Project1/" target="_blank">Dump Trump Insights</a>
                         <p><span class="pD">- API Development</span><br>
                         <span class="pD">- Firebase Database</span><br>
