adding animation for xmas and intro text

--- a/about.html
+++ b/about.html
@@ -103,6 +103,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
 
+    <!-- jQuery Snowfall CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/JQuery-Snowfall/1.7.4/snowfall.jquery.min.js" crossorigin="anonymous"></script>
+
     <!-- Custom JS -->
     <script src="assets/js/app.js"></script>
 </body>
