--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         crossorigin="anonymous">
 
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Megrim|Space+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Megrim|Space+Mono|Mountains+of+Christmas:400,700|Press+Start+2P|Roboto:400,700,900" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <!-- Font Awesome CDN -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -44,6 +47,16 @@
                 </ul>
             </div>
         </div>
+        <div class="col-sm-10">
+            <div class="content">
+                <div id="title" class="titleAnimate">
+                    <p>Fullstack Developer</p>
+                </div>
+                <div id="subtext">
+                    <p>Merry Xmas</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -59,6 +72,9 @@
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
+
+    <!-- jQuery Snowfall CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/JQuery-Snowfall/1.7.4/snowfall.jquery.min.js" crossorigin="anonymous"></script>
 
     <!-- Custom JS -->
     <script src="assets/js/app.js"></script>
