--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
         <div class="col-sm-10">
             <div class="content">
-                <div id="title" class="titleAnimate">
+                <div id="title" class="titleAnimate collectonme">
                     <p>Fullstack Developer</p>
                 </div>
-                <div id="subtext">
+                <div id="subtext" class="collectonme">
                     <p>Merry Xmas</p>
                 </div>
             </div>
