fixing title and font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ian Bunn - code away</title>
+    <title>Ian Bunn - Full Stack Developer</title>
 
     <!-- Reset CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -49,10 +49,10 @@
         </div>
         <div class="col-sm-10">
             <div class="content">
-                <div id="title" class="titleAnimate collectonme">
+                <div id="title">
                     <p>Fullstack Developer</p>
                 </div>
-                <div id="subtext" class="collectonme">
+                <div id="subtext">
                     <p>Merry Xmas</p>
                 </div>
             </div>
