--- a/about.html
+++ b/about.html
@@ -37,17 +37,7 @@
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <!-- <li><a href="blog.html">Blog</a></li>
-                        
-                        <li><a href="tools.html">Tools</a></li>
-                        <li><a href="culture.html">Culture</a></li>
-                        <ul>
-                            <li><a href="art.html">Art</a></li>
-                            <li><a href="books.html">Books</a></li>
-                            <li><a href="movies.html">Movies</a></li>
-                            <li><a href="music.html">Music</a></li>
-                        </ul>
-                        <li><a href="contact.html">Contact</a></li> -->
+                        <li><a href="writings.html">Writings</a></li>
                     </ul>
                 </div>
             </div>
