--- a/portfolio.html
+++ b/portfolio.html
@@ -29,35 +29,26 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-2">
-                <div class="menu">
-                    <ul class="logo">
-                        <li><a href="index.html">Ian Bunn</a></li>
-                    </ul>
-                    <ul class="items">
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="about.html#contact">Contact</a></li>
-                        <!-- <li><a href="blog.html">Blog</a></li>
-                    <li><a href="tools.html">Tools</a></li>
-                    <li><a href="culture.html">Culture</a></li>
-                        <ul>
-                            <li><a href="art.html">Art</a></li>
-                            <li><a href="books.html">Books</a></li>
-                            <li><a href="movies.html">Movies</a></li>
-                            <li><a href="music.html">Music</a></li>
-                        </ul>
-                    <li><a href="contact.html">Contact</a></li> -->
-                    </ul>
-                </div>
+            <div class="menu">
+                <ul class="logo">
+                    <li><a href="index.html">Ian Bunn</a></li>
+                </ul>
+                <ul class="items">
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html#contact">Contact</a></li>
+                    <li><a href="writings.html">Writings</a></li>
+                </ul>
+            </div>
             </div>
             <div class="col-sm-10">
                 <div class="content">
                     <ul>
-                        <li><a href="http://brewstereqs.com/" target="_blank">Brewster Environmental Quality Services (BEQS)</a>
+                        <!-- <li><a href="http://brewstereqs.com/" target="_blank">Brewster Environmental Quality Services (BEQS)</a>
                         <p><span class="pD">- Designed website using WordPress</span><br>
                         <span class="pD">- PHP oriented with commercial plug-ins</span><br>
                         <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
-                        <span class="pD">- Created for private client</span></p></li>
+                        <span class="pD">- Created for private client</span></p></li> -->
                         
                         <li><a href="https://github.com/ianbunn/LIRIbot" target="_blank">LIRIBot</a>
                         <p><span class="pD">- Language Interpretation and Recognition Interface (LIRI)</span><br>
