--- a/writings.html
+++ b/writings.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -14,7 +15,8 @@
         crossorigin="anonymous">
 
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Megrim|Space+Mono|Mountains+of+Christmas:400,700|Press+Start+2P|Roboto:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Megrim|Space+Mono|Mountains+of+Christmas:400,700|Press+Start+2P|Roboto:400,700,900"
+        rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -22,52 +24,56 @@
     <!-- Font Awesome CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
+
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-2">
-            <div class="menu">
-                <ul class="logo">
-                    <li><a href="#">Ian Bunn</a></li>
-                </ul>
-                <ul class="items">
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="about.html#contact">Contact</a></li>
-                    <li><a href="writings.html">Writings</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-sm-10">
-            <div class="content">
-                <div id="title">
-                    <p>Fullstack Developer</p>
-                </div>
-                <div id="subtext">
-                    <p><a href="20190107cryptothought001.html">New #CryptoThought entry here...</a></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="menu">
+                    <ul class="logo">
+                        <li><a href="index.html">Ian Bunn</a></li>
+                    </ul>
+                    <ul class="items">
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="about.html#contact">Contact</a></li>
+                        <li><a href="#">Writings</a></li>
+                    </ul>
                 </div>
             </div>
+
+            <div class="col-sm-10">
+                <div class="content">
+                    <div id="title">
+                        <p>Collection of Writings</p>
+                    </div>
+                    <hr>
+                    <div id="subtext">
+                        <p><a href="20190107cryptothought001.html">BTC and 2019 Predictions</a></p>
+                        <span class="title">Published 2019 January 07</span>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+
         </div>
     </div>
-</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
 
-    <!-- jQuery Snowfall CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/JQuery-Snowfall/1.7.4/snowfall.jquery.min.js" crossorigin="anonymous"></script>
-
     <!-- Custom JS -->
     <script src="assets/js/app.js"></script>
 </body>
+
 </html>
