adding portfolio item for bamazon

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,13 @@
                         <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
                         <span class="pD">- Created for private client</span></p></li> -->
                         
+                        <li><a href="https://github.com/ianbunn/bamazon" target="_blank">bamazon</a>
+                        <p><span class="pD">- An Amazon-like storefront CLI app</span><br>
+                        <span class="pD">- Node JS aplication</span><br>
+                        <span class="pD">- MySQL DB stack integration</span><br>
+                        <span class="pD">- Inventory tracking system included</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/bamazon" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
+
                         <li><a href="https://github.com/ianbunn/LIRIbot" target="_blank">LIRIBot</a>
                         <p><span class="pD">- Language Interpretation and Recognition Interface (LIRI)</span><br>
                         <span class="pD">- Node JS aplication</span><br>
