adding new project item

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,13 @@
                         <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
                         <span class="pD">- Created for private client</span></p></li> -->
                         
+                        <li><a href="https://beerfriendfinder.herokuapp.com/" target="_blank">Friend Finder</a>
+                        <p><span class="pD">- Find a beerfriend based on least total differences</span><br>
+                        <span class="pD">- Node JS aplication</span><br>
+                        <span class="pD">- Express.js application</span><br>
+                        <span class="pD">- API routing and JSON data for app</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/FriendFinder" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
+
                         <li><a href="https://github.com/ianbunn/bamazon" target="_blank">bamazon</a>
                         <p><span class="pD">- An Amazon-like storefront CLI app</span><br>
                         <span class="pD">- Node JS aplication</span><br>
