fixing details in readme

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                         <span class="pD">- Created for private client</span></p></li> -->
                         
                         <li><a href="https://beerfriendfinder.herokuapp.com/" target="_blank">Friend Finder</a>
-                        <p><span class="pD">- Find a beerfriend based on least total differences</span><br>
+                        <p><span class="pD">- Find a beerfriend based on most compatibility</span><br>
                         <span class="pD">- Node JS aplication</span><br>
                         <span class="pD">- Express.js application</span><br>
                         <span class="pD">- API routing and JSON data for app</span><br>
