missed a bracket on a href

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                         <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
                         <span class="pD">- Created for private client</span></p></li> -->
                         
-                        <li><a href="https://sleepy-meadow-89978.herokuapp.com/" target="_blank">Warhol Burgers/a>
+                        <li><a href="https://sleepy-meadow-89978.herokuapp.com/" target="_blank">Warhol Burgers</a>
                         <p><span class="pD">- Keep track of burger inventory</span><br>
                         <span class="pD">- Heroku application</span><br>
                         <span class="pD">- MySQL, Node, Express and Handlebars</span><br>
