--- a/20190208cryptothought002.html
+++ b/20190208cryptothought002.html
@@ -37,7 +37,7 @@
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="about.html#contact">Contact</a></li>
-                        <li><a href="#">Writings</a></li>
+                        <li><a href="writings.html">Writings</a></li>
                     </ul>
                 </div>
             </div>
@@ -45,16 +45,42 @@
             <div class="col-sm-10">
                 <div class="content">
                     <div id="title">
-                        <p>Collection of Writings</p>
+                        <h1>BTC and 2019 Predictions</h1>
                     </div>
-                    <hr>
-                    <div id="subtext">
-                        <p><a href="20190107cryptothought001.html">BTC and 2019 Predictions</a></p>
-                        <span class="title">Published 2019 January 07</span>
-                        <p><a href="20190208cryptothought002.html">Up in Smoke - All Time Lows - Maybe Moon 2019?</a></p>
-                        <span class="title">Published 2019 February 08</span>
+                    <div id="title">
+                        <p>Summary for those TLDRs from <a href="https://weisscryptocurrencyratings.com/news/crypto-forecasts-2019-beyond-1759" target="_blank">Weiss Cryptocurrency Ratings - Crypto forecasts 2019 and beyond</a></p>
+                        <p><span class="title">Published 2019 January 07</span></p>
+                        <p>1. Bitcoin is the preferred crypto as store of value</p>
+                        <p>There are new features deployed including:</p>
+                        <ul>
+                            <li>• BTC Lightning Network</li>
+                            <li>• Hedera Hashgraph</li>
+                            <li>• Holochain</li>
+                            <li>• And more</li>
+                        </ul>
+                        <p>2. BTC is leading in the following key elements:</p>
+                        <ol>
+                            <li>I---Enhanced level of security</li>
+                            <li>II--Transportability</li>
+                            <li>III-Cost-efficiency</li>
+                            <li>IV--And more</li>
+                        </ol>
+                        <p>3. BTC will get new ballers in 2019, and they are (slow drums)...</p>
+                        <ul>
+                            <li>• NASDAQ</li>
+                            <li>• Bakkt</li>
+                            <li>• To say the least</li>
+                        </ul>
+                        <p>4. Weiss predicts cryptocurrency market will be down 70% more from our previous spike, and then MOON 6300%</p>
+                        <p>5. Altcoins and BCH will probably fade away</p>
+                        <p>6. Internet 3.0 made possible by:</p>
+                        <ul>
+                            <li>• EOS</li>
+                            <li>• Holochain</li>
+                            <li>• Cardano</li>
+                        </ul>
+                        <p>7. What the F$#K is Hedera Hashgraph? Well, Weiss is predicting its coin to skyrocket 20x after ICO</p>
                     </div>
-                    <hr>
                 </div>
             </div>
 
