fixed writings spacing

--- a/20190208cryptothought002.html
+++ b/20190208cryptothought002.html
@@ -45,41 +45,47 @@
             <div class="col-sm-10">
                 <div class="content">
                     <div id="title">
-                        <h1>BTC and 2019 Predictions</h1>
+                        <h1>Up in Smoke - All Time Lows - Maybe Moon 2019?</h1>
                     </div>
                     <div id="title">
-                        <p>Summary for those TLDRs from <a href="https://weisscryptocurrencyratings.com/news/crypto-forecasts-2019-beyond-1759" target="_blank">Weiss Cryptocurrency Ratings - Crypto forecasts 2019 and beyond</a></p>
-                        <p><span class="title">Published 2019 January 07</span></p>
+                        <p>It's been a month since I've last checked in on some of the shakers and movers of the Cryptoworld. It's good to see that the market has been stable for the past year and a half, other than the crazy -80% decline. Besides the FUD out there, there are PLENTY of good news that could set this industry on another rally path. Here are some of the positive schtuff going on:</p>
+                        <p><span class="title">Published 2019 February 08</span></p>
                         <p>1. Bitcoin is the preferred crypto as store of value</p>
-                        <p>There are new features deployed including:</p>
+                        <p>U.S. SEC Commissioner Robert J.Jackson Jr. said it's only a matter of time before a BTC ETF gets the approval stamp from the SEC:</p>
                         <ul>
-                            <li>• BTC Lightning Network</li>
-                            <li>• Hedera Hashgraph</li>
-                            <li>• Holochain</li>
-                            <li>• And more</li>
+                            <li>• Though barriers to entry has been an issue in innovation, we all know this, thank you, SEC, now get that red ribbon outta the way!</li>
+                            <li>• This would be HUGEEEE for average Joe's, since they would feel safe to invest in BTC with the backing of the SEC</li>
+                            <li>• And well, it would make us all legit, #TooLegitToQuit</li>
                         </ul>
-                        <p>2. BTC is leading in the following key elements:</p>
+                        <p>2. Noble Bank is at its noblest, and BACK by popular demand in...PUERTO RRRRICO:</p>
                         <ol>
-                            <li>I---Enhanced level of security</li>
-                            <li>II--Transportability</li>
-                            <li>III-Cost-efficiency</li>
-                            <li>IV--And more</li>
+                            <li>• Former Nasdaq Futures CEO joins Noble Bank as it gets ready to launch, #Take2</li>
+                            <li>• Noble Bank offers crypto OTC trading plus banking services</li>
+                            <li>• More infrastructures coming to developing economies</li>
                         </ol>
-                        <p>3. BTC will get new ballers in 2019, and they are (slow drums)...</p>
+                        <p>3. QuadrigaCX's CEO, I'm Ron Burgundy? R.I.P.?/p>
                         <ul>
-                            <li>• NASDAQ</li>
-                            <li>• Bakkt</li>
-                            <li>• To say the least</li>
+                            <li>• Drama intensifies at the QuadricaCX HQs with a TuPac and Biggie conspiracy theory about their CEO kicking it ol' school</li>
+                            <li>• No cold storage wallet? Thankfully, they are Canadians</li>
+                            <li>• Everyone gets their money back, except for Canada, not a win-win, #SomebodyHasToPayForTheFreeOfficeSnacks</li>
                         </ul>
-                        <p>4. Weiss predicts cryptocurrency market will be down 70% more from our previous spike, and then MOON 6300%</p>
-                        <p>5. Altcoins and BCH will probably fade away</p>
-                        <p>6. Internet 3.0 made possible by:</p>
+                        <p>4. Bakkt's team keeps growing</p>
                         <ul>
-                            <li>• EOS</li>
-                            <li>• Holochain</li>
-                            <li>• Cardano</li>
+                            <li>• Hired Erik Haas from ICE, Bakkt's parent exchange; Haas spearheaded the regulation department for 9 years</li>
+                            <li>• Hired Rachel Ford as strategic operations manager, former Techstars employee</li>
+                            <li>• Bakkt wants to specifically target mobile users, hence the search for rushed searched for mobile engineers</li>
                         </ul>
-                        <p>7. What the F$#K is Hedera Hashgraph? Well, Weiss is predicting its coin to skyrocket 20x after ICO</p>
+                        <p>5. Ripple is coming back, with educational strength</p>
+                        <ul>
+                            <li>• Ripple launched University Blockchain Research Institute (UBRI) wit hthe help of Cornell, Duke, National Univ of Singapore, Northeastern Univ, and Univ of Sao Paulo</li>
+                            <li>• Ripple keeps wanting to be the good guy, but a centralized blockchain defeats the purpose of a decentralized blockchain, doesn't it? NEXT!</li>
+                        </ul>
+                        <p>6. Accio Litecoin!</p>
+                        <ul>
+                            <li>• Mimblewimble integration lifts LTC 12%</li>
+                            <li>• Protocol improves privacy and scalability</li>
+                        </ul>
+                        <p>7. And last, but not least! A spike today to cryptomarket cap of $20B in the last 24 hours...get your banks ready.</p>
                     </div>
                 </div>
             </div>
