--- a/writings.html
+++ b/writings.html
@@ -51,6 +51,9 @@
                     <div id="subtext">
                         <p><a href="20190107cryptothought001.html">BTC and 2019 Predictions</a></p>
                         <span class="title">Published 2019 January 07</span>
+                    </div>
+                    <hr>
+                    <div id="subtext">
                         <p><a href="20190208cryptothought002.html">Up in Smoke - All Time Lows - Maybe Moon 2019?</a></p>
                         <span class="title">Published 2019 February 08</span>
                     </div>
