adding about brand statement

--- a/about.html
+++ b/about.html
@@ -54,6 +54,12 @@
                         It's me, Ian, currently living in <span class="crossed-out">Nvo. Laredo, Mexico (0115287)</span> <span class="crossed-out">LTX (956)</span> <span class="crossed-out">SATX (210)</span> <span class="crossed-out">KTX (361)</span> <span class="crossed-out">SDTX (361)</span> <b>ATX (512)</b>.
                     <br>
                     <br>
+                        Full-stack Developer passionate about software that provides positive value to our community. Currently employed as
+                        DevOps Engineer and Internal Development. Fluent in JS, Node.JS, React, SQL, and NoSQL. Self-starter and entrepreneurial
+                        attitude that enables me to clear obstacles for the team. Strong supporter of blockchain and cryptocurrencies that
+                        provide solutions to socio-economic problems.
+                    <br>
+                    <br>
                         At the moment, I'm working on a Full-stack Development Certification at the University of Texas in Austin. With this acquired education, I will work on my crazy ideas and build apps for an enlightened society.
                     <br>
                     <br>
