--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,13 @@
                         <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
                         <span class="pD">- Created for private client</span></p></li> -->
                         
+                        <li><a href="https://floating-oasis-93461.herokuapp.com/" target="_blank">STEM Nerd News</a>
+                        <p><span class="pD">- Scraping from <a href="https://theconversation.com/us/technology" target="_blank">The Conversation's Science & Tech</a></span><br>
+                        <span class="pD">- Heroku application</span><br>
+                        <span class="pD">- MongoDB, Node, Express, Cheerio and Handlebars</span><br>
+                        <span class="pD">- MVC app architecture</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/news-scraper" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
+
                         <li><a href="https://sleepy-meadow-89978.herokuapp.com/" target="_blank">Warhol Burgers</a>
                         <p><span class="pD">- Keep track of burger inventory</span><br>
                         <span class="pD">- Heroku application</span><br>
