adding new items to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,20 @@
                         <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
                         <span class="pD">- Created for private client</span></p></li> -->
                         
+                        <li><a href="https://ianbunn.github.io/memoryclickygame/" target="_blank">React - NFL Clicky Game</a>
+                        <p><span class="pD">- React.js app</a></span><br>
+                        <span class="pD">- Deployed to GitHub pages</span><br>
+                        <span class="pD">- Node, Express, and React.js</span><br>
+                        <span class="pD">- MVC app architecture</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/news-scraper" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
+
+                        <li><a href="http://www.polystocks.com/" target="_blank">Polystocks</a>
+                        <p><span class="pD">- Search and store beautiful stock photos from three sources</span><br>
+                        <span class="pD">- Heroku application</span><br>
+                        <span class="pD">- MongoDB, Node, Express, Cheerio and Handlebars</span><br>
+                        <span class="pD">- MVC app architecture</span><br>
+                        <span class="cL"><a href="https://github.com/rebecalvarez/Project2" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
+
                         <li><a href="https://floating-oasis-93461.herokuapp.com/" target="_blank">STEM Nerd News</a>
                         <p><span class="pD">- Scraping from <a href="https://theconversation.com/us/technology" target="_blank">The Conversation's Science & Tech</a></span><br>
                         <span class="pD">- Heroku application</span><br>
