added new port item

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,13 @@
                         <span class="pD">- Cloud-based hosted on AWS EC2</span><br>
                         <span class="pD">- Created for private client</span></p></li> -->
                         
+                        <li><a href="https://allmightybooksearch.herokuapp.com/" target="_blank">React - All Mighty Book Search</a>
+                        <p><span class="pD">- React.js app</a></span><br>
+                        <span class="pD">- Mongo, Express, Node.js and React (MERN stack)</span><br>
+                        <span class="pD">- Deployed on Heroku</span><br>
+                        <span class="pD">- MVC app architecture</span><br>
+                        <span class="cL"><a href="https://github.com/ianbunn/mernlibrarysearch" target="_blank">- Code here <i class="fas fa-code"></i></a></span></p></li>
+
                         <li><a href="https://ianbunn.github.io/memoryclickygame/" target="_blank">React - NFL Clicky Game</a>
                         <p><span class="pD">- React.js app</a></span><br>
                         <span class="pD">- Deployed to GitHub pages</span><br>
